--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -2,14 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.DataProtection": "Information"
     }
   },
   "Email": {
     "SmtpServer": "smtp.gmail.com",
     "SmtpPort": 587, 
-    "FromEmail": "email",
-    "Password": "password"
+    "FromEmail": "olssonmarkus54@gmail.com",
+    "Password": "loya kxyt gbxp fqhb"
   },
   "AllowedHosts": "*"
 }
