--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,10 +31,10 @@ jobs:
         playwright install
         
     - name: Run Playwright tests
-      run: dotnet test server/Playwright/ --no-build --verbosity normal
+      run: dotnet test server/Playwright/Features --no-build --verbosity normal
       
     - name: Install Newman for Postman tests
       run: npm install -g newman
       
     - name: Run Postman collection tests
-      run: newman run ./postman/collection.json -e ./postman/environment.json
+      run: newman run ./Postman/CRM-Testning.postman_collection -e ./postman/environment.json
