--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,17 @@ jobs:
     - name: Run unit tests
       run: dotnet test Xunit/ --no-build --verbosity normal
       
-        
+    - name: Install Playwright
+      run: dotnet tool install --global Microsoft.Playwright.CLI
+      
+    - name: Install Playwright browsers
+      run: playwright install --with-deps
+      
     - name: Run Playwright tests
-      run: dotnet test .server/Playwright/  --no-build --verbosity normal
+      run: dotnet test server/Playwright/ --no-build --verbosity normal
       
     - name: Install Newman for Postman tests
       run: npm install -g newman
       
     - name: Run Postman collection test
-      run: newman run Postman/CRM-Testning.postman_collection 
+      run: newman run Postman/CRM-Testning.postman_collection
