--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       run: playwright install --with-deps
       
     - name: Run Playwright tests
-      run: dotnet test server/Playwright/ --no-build --verbosity normal
+      run: dotnet test server/Features/ --no-build --verbosity normal
       
     - name: Install Newman for Postman tests
       run: npm install -g newman
