--- a/server/server.csproj
+++ b/server/server.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="xunit" Version="2.9.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="PlaywrightTests\PlaywrightTests.csproj" />
+  </ItemGroup>
+
 </Project>
