--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,8 @@ jobs:
       run: playwright install --with-deps
 
     - name: Run Playwright tests
-      run: dotnet test server/server.csproj --filter "FullyQualifiedName~.Playwright." --no-build --verbosity normal
+      run: dotnet test PlaywrightTests/PlaywrightTests.csproj --no-build --verbosity normal
+
       
     - name: Install Newman for Postman tests
       run: npm install -g newman
