--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,48 +23,57 @@ jobs:
     - name: Build the project
       run: dotnet build --no-restore --configuration Debug
 
+    # Playwright Setup
     - name: Install Playwright CLI
       run: dotnet tool install --global Microsoft.Playwright.CLI
 
     - name: Install Playwright system dependencies
       run: |
-       sudo apt-get update
-       sudo apt-get install -y \
-       libasound2t64 \  
-       libatk-bridge2.0-0 \
-       libatk1.0-0 \
-       libatspi2.0-0 \
-       libcairo2 \
-       libcups2 \
-       libdbus-1-3 \
-       libdrm2 \
-       libgbm1 \
-       libglib2.0-0 \
-       libgtk-3-0 \
-       libnspr4 \
-       libnss3 \
-       libpango-1.0-0 \
-       libx11-6 \
-       libxcb1 \
-       libxcomposite1 \
-       libxdamage1 \
-       libxext6 \
-       libxfixes3 \
-       libxrandr2 \
-       libxshmfence1
+        sudo apt-get update
+        sudo apt-get install -y \
+          libasound2t64 \
+          libatk-bridge2.0-0 \
+          libatk1.0-0 \
+          libatspi2.0-0 \
+          libcairo2 \
+          libcups2 \
+          libdbus-1-3 \
+          libdrm2 \
+          libgbm1 \
+          libglib2.0-0 \
+          libgtk-3-0 \
+          libnspr4 \
+          libnss3 \
+          libpango-1.0-0 \
+          libx11-6 \
+          libxcb1 \
+          libxcomposite1 \
+          libxdamage1 \
+          libxext6 \
+          libxfixes3 \
+          libxrandr2 \
+          libxshmfence1
 
     - name: Install Playwright browsers
       run: |
-       cd Playwright
-       dotnet build
-       playwright install --with-deps
+        cd Playwright
+        dotnet build
+        playwright install --with-deps
 
-
+    # Test Execution
     - name: Run Playwright tests
-      run: dotnet test Playwright/ --no-build --verbosity normal
+      run: |
+        cd Playwright
+        dotnet test --no-build --verbosity normal -- Playwright.LaunchOptions.Headless=true
 
     - name: Run unit tests
       run: dotnet test Xunit/ --no-build --verbosity normal
+
+    # Postman Tests
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
 
     - name: Install Newman for Postman tests
       run: npm install -g newman
