--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,14 +27,14 @@ jobs:
     - name: Install Playwright CLI
       run: dotnet tool install --global Microsoft.Playwright.CLI
 
-    - name: Install Playwright system dependencies
+    - name: Install system dependencies (Ubuntu 22.04/24.04 compatible)
       run: |
         sudo apt-get update
+        # Try installing both old and new package names
         sudo apt-get install -y \
-          libasound2t64 \
-          libatk-bridge2.0-0 \
-          libatk1.0-0 \
-          libatspi2.0-0 \
+          libasound2 libasound2t64 \
+          libatk1.0-0 libatk-bridge2.0-0 \
+          libatomic1 \
           libcairo2 \
           libcups2 \
           libdbus-1-3 \
@@ -51,14 +51,18 @@ jobs:
           libxdamage1 \
           libxext6 \
           libxfixes3 \
-          libxrandr2 \
-          libxshmfence1
+          libxkbcommon0 \
+          libxrandr2 || true  # Continue even if some packages fail
 
     - name: Install Playwright browsers
       run: |
         cd Playwright
         dotnet build
         playwright install --with-deps
+        # Fallback to direct download if needed
+        if [ $? -ne 0 ]; then
+          npx playwright install --with-deps
+        fi
 
     # Test Execution
     - name: Run Playwright tests
