--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   build-and-test:
+    container: mcr.microsoft.com/playwright/dotnet:latest
     runs-on: ubuntu-latest
     steps:
     - name: Check out repository
@@ -23,57 +24,12 @@ jobs:
     - name: Build the project
       run: dotnet build --no-restore --configuration Debug
 
-    # Playwright Setup
-    - name: Install Playwright CLI
-      run: dotnet tool install --global Microsoft.Playwright.CLI
-
-    - name: Install system dependencies (Ubuntu 22.04/24.04 compatible)
-      run: |
-        sudo apt-get update
-        # Try installing both old and new package names
-        sudo apt-get install -y \
-          libasound2 libasound2t64 \
-          libatk1.0-0 libatk-bridge2.0-0 \
-          libatomic1 \
-          libcairo2 \
-          libcups2 \
-          libdbus-1-3 \
-          libdrm2 \
-          libgbm1 \
-          libglib2.0-0 \
-          libgtk-3-0 \
-          libnspr4 \
-          libnss3 \
-          libpango-1.0-0 \
-          libx11-6 \
-          libxcb1 \
-          libxcomposite1 \
-          libxdamage1 \
-          libxext6 \
-          libxfixes3 \
-          libxkbcommon0 \
-          libxrandr2 || true  # Continue even if some packages fail
-
-    - name: Install Playwright browsers
-      run: |
-        cd Playwright
-        dotnet build
-        playwright install --with-deps
-        # Fallback to direct download if needed
-        if [ $? -ne 0 ]; then
-          npx playwright install --with-deps
-        fi
-
-    # Test Execution
     - name: Run Playwright tests
-      run: |
-        cd Playwright
-        dotnet test --no-build --verbosity normal -- Playwright.LaunchOptions.Headless=true
+      run: dotnet test Playwright/ --no-build --verbosity normal
 
     - name: Run unit tests
       run: dotnet test Xunit/ --no-build --verbosity normal
 
-    # Postman Tests
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
