--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-test:
-    container: mcr.microsoft.com/playwright/dotnet:latest
+    container:  mcr.microsoft.com/playwright/dotnet:v1.46.0-jammy
     runs-on: ubuntu-latest
     steps:
     - name: Check out repository
