--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,28 +7,65 @@ on:
 
 jobs:
   build-and-test:
-    container: mcr.microsoft.com/playwright/dotnet:v1.46.0-jammy
     runs-on: ubuntu-latest
     steps:
     - name: Check out repository
       uses: actions/checkout@v3
 
-    - name: Set up .NET
+    - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '8.0.x'
 
-    - name: Restore dependencies
-      run: dotnet restore
+    - name: Install exact Playwright version
+      run: |
+        dotnet add Playwright/Playwright.csproj package Microsoft.Playwright.NUnit --version 1.44.0
+        dotnet add Playwright/Playwright.csproj package Microsoft.Playwright --version 1.44.0
+        dotnet tool install --global Microsoft.Playwright.CLI --version 1.44.0
 
-    - name: Build the project
-      run: dotnet build --no-restore --configuration Debug
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          libasound2 \
+          libatk1.0-0 \
+          libatk-bridge2.0-0 \
+          libatomic1 \
+          libcairo2 \
+          libcups2 \
+          libdbus-1-3 \
+          libdrm2 \
+          libgbm1 \
+          libglib2.0-0 \
+          libgtk-3-0 \
+          libnspr4 \
+          libnss3 \
+          libpango-1.0-0 \
+          libx11-6 \
+          libxcb1 \
+          libxcomposite1 \
+          libxdamage1 \
+          libxext6 \
+          libxfixes3 \
+          libxkbcommon0 \
+          libxrandr2
+
+    - name: Install browsers
+      run: |
+        cd Playwright
+        dotnet build
+        npx playwright install --with-deps chromium
+
+    - name: Verify installation
+      run: |
+        ls -la ~/.cache/ms-playwright/
+        npx playwright --version
+        dotnet tool list -g
 
     - name: Run Playwright tests
       run: |
-        dotnet test Playwright/ --no-build --verbosity normal
-        # If still failing, try with direct playwright test
-        npx playwright test --config=Playwright/playwright.config.ts
+        cd Playwright
+        dotnet test --no-build --verbosity normal
 
     - name: Run unit tests
       run: dotnet test Xunit/ --no-build --verbosity normal
@@ -38,8 +75,8 @@ jobs:
       with:
         node-version: '18'
 
-    - name: Install Newman for Postman tests
+    - name: Install Newman
       run: npm install -g newman
 
-    - name: Run Postman collection test
+    - name: Run Postman tests
       run: newman run Postman/CRM-Testning.postman_collection
