--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,30 +26,31 @@ jobs:
 
     - name: Install system dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          libasound2 \
-          libatk1.0-0 \
-          libatk-bridge2.0-0 \
-          libatomic1 \
-          libcairo2 \
-          libcups2 \
-          libdbus-1-3 \
-          libdrm2 \
-          libgbm1 \
-          libglib2.0-0 \
-          libgtk-3-0 \
-          libnspr4 \
-          libnss3 \
-          libpango-1.0-0 \
-          libx11-6 \
-          libxcb1 \
-          libxcomposite1 \
-          libxdamage1 \
-          libxext6 \
-          libxfixes3 \
-          libxkbcommon0 \
-          libxrandr2
+       sudo apt-get update
+       sudo apt-get install -y \
+       liboss4-salsa-asound2 \
+       libatk1.0-0 \
+       libatk-bridge2.0-0 \
+       libatomic1 \
+       libcairo2 \
+       libcups2 \
+       libdbus-1-3 \
+       libdrm2 \
+       libgbm1 \
+       libglib2.0-0 \
+       libgtk-3-0 \
+       libnspr4 \
+       libnss3 \
+       libpango-1.0-0 \
+       libx11-6 \
+       libxcb1 \
+       libxcomposite1 \
+       libxdamage1 \
+       libxext6 \
+       libxfixes3 \
+       libxkbcommon0 \
+       libxrandr2
+
 
     - name: Install browsers
       run: |
