--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,25 +4,29 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
     steps:
     - name: Check out repository
       uses: actions/checkout@v3
-
+      
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '8.0.x'
-
+        
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+        
     - name: Install Playwright packages
       run: |
         dotnet add Playwright/Playwright.csproj package Microsoft.Playwright.NUnit
         dotnet add Playwright/Playwright.csproj package Microsoft.Playwright
         dotnet tool install --global Microsoft.Playwright.CLI
-
+        
     - name: Install system dependencies
       run: |
        sudo apt-get update
@@ -50,35 +54,57 @@ jobs:
        libxkbcommon0 \
        libxrandr2 \
        xvfb
-
+       
     - name: Install browsers
       run: |
         cd Playwright
         dotnet build
         playwright install --with-deps chromium
-
+        cd ..
+        
     - name: Verify installation
       run: |
         ls -la ~/.cache/ms-playwright/
         playwright --version
         dotnet tool list -g
-
+        
+    # Start server (.NET application)
+    - name: Start server
+      run: |
+        cd Server/
+        dotnet run &
+        echo "Server starting..."
+        sleep 10  # Give the server time to start
+        cd ..
+        
+    # Start client (Node.js application)
+    - name: Install client dependencies and start
+      run: |
+        cd Client/
+        npm install
+        npm run dev &
+        echo "Client starting..."
+        sleep 15  # Give the client app time to start
+        cd ..
+        
+    # Debug information
+    - name: Check if services are running
+      run: |
+        echo "Checking if client and server are running..."
+        netstat -tulpn
+        curl -v http://localhost:5173/ || echo "Client service not responding"
+        
     - name: Set HEADLESS environment variable
       run: echo "HEADLESS=true" >> $GITHUB_ENV
-
+      
     - name: Run Playwright tests
       run: xvfb-run --auto-servernum dotnet test Playwright --no-build --verbosity normal
-
+      
     - name: Run unit tests
       run: dotnet test Xunit/ --no-build --verbosity normal
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-
+      
     - name: Install Newman
       run: npm install -g newman
-
+      
     - name: Run Postman tests
       run: newman run Postman/CRM-Testning.postman_collection
