--- a/Playwright/Playwright.csproj
+++ b/Playwright/Playwright.csproj
@@ -11,7 +11,9 @@
         <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
         <PackageReference Include="SpecFlow.NUnit" Version="3.9.74" />
-        <PackageReference Include="Microsoft.Playwright.NUnit" Version="1.44.0" />
+        <PackageReference Include="Microsoft.Playwright.NUnit" Version="1.46.0" />
+        <PackageReference Include="Microsoft.Playwright" Version="1.46.0" />
+        
     </ItemGroup>
 
 </Project>
