--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,49 +43,37 @@ jobs:
     - name: Build Playwright project
       run: cd Playwright && dotnet build
     
-    # Robust Playwright installation
-    - name: Install Playwright and browsers
+    # Install Playwright
+    - name: Install Playwright browsers
       run: |
-        # Install packages
-        dotnet add Playwright package Microsoft.Playwright
         dotnet tool install --global Microsoft.Playwright.CLI
-        
-        # Add .NET tools to PATH
         echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
-        
-        # Install browsers using all possible methods
         cd Playwright
-        dotnet build
-        
-        # Method 1: Try .NET CLI
-        dotnet playwright install --with-deps chromium || \
-        # Method 2: Try PowerShell script
-        pwsh bin/Debug/net8.0/playwright.ps1 install || \
-        # Method 3: Try npx fallback
-        npx playwright install --with-deps chromium
-        
-        # Verify installation
-        ls -la ~/.cache/ms-playwright/chromium-*/
+        dotnet playwright install --with-deps chromium
     
-    # Start services
+    # Start server with proper port
     - name: Start server
-      run: cd Server && nohup dotnet run &
+      run: |
+        cd Server
+        nohup dotnet run --urls "http://localhost:5000;https://localhost:5001" > server.log 2>&1 &
+        echo "Server starting..."
     
-    - name: Setup Node.js for client
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-        
+    # Start client with proper port and wait
     - name: Start client
-      run: cd Client && npm install && nohup npm run dev &
-      
-    - name: Wait for services
-      run: sleep 15
-      
-    # Run tests
+      run: |
+        cd Client
+        npm install
+        nohup npm run dev -- --port 5173 > client.log 2>&1 &
+        echo "Waiting for client to be ready..."
+        timeout 60 bash -c 'until curl -s http://localhost:5173 >/dev/null; do sleep 1; echo "Waiting..."; done'
+        echo "Client ready!"
+    
+    # Run tests with proper base URL
     - name: Run Playwright tests
-      run: cd Playwright && dotnet test
-      
+      run: |
+        cd Playwright
+        dotnet test --filter "FullyQualifiedName~Playwright" -- TestRunParameters.Parameter(name:\"BaseUrl\",value:\"http://localhost:5173\")
+    
     - name: Run unit tests
       run: dotnet test Xunit/
       
